# rosidl_generator_cs

./: CMakeLists.txt  README.md  package.xml  rosidl_generator_cs-extras.cmake.in  setup.cfg
cmake/: register_cs.cmake  rosidl_generator_cs_generate_interfaces.cmake
resource/: msg.cs.em
rosidl_generator_cs/: __init__.py  cli.py
