<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidl_generator_cs</name>
  <version>0.2.0</version>
  <description>Generate the ROS interfaces in C#.</description>
  <maintainer email="tamas.bates@tum.de">Tamas Bates</maintainer>
  <license>AGPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_export_depend>ament_cmake_core</buildtool_export_depend>
  <buildtool_export_depend>python3</buildtool_export_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rosidl_cli</exec_depend>
  <exec_depend>rosidl_parser</exec_depend>

  <member_of_group>rosidl_generator_packages</member_of_group>
  <member_of_group>rosidl_default_generators</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
